# vicardi

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  flake.nix
.github/workflows/: release.yml  test.yml
src/: de.rs  lib.rs  macros.rs  models.rs  ser.rs  structured.rs
