[package]
name = "vicardi"
version = "0.1.7"
edition = "2021"
homepage = "https://oss.uzinfocom.uz"
repository = "https://github.com/uzinfocom-org/vicardi"
description = "JSON VCardArray Generator that uses Serde"
authors = ["UwUssimo Robinson <uwussimo@icloud.com> (https://uwussi.moe)"]
keywords = ["jcard", "vcardarray", "serde"]
readme = "readme.md"
categories = ["data-structures"]
license = "GPL-3.0"
exclude = ["target", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_with = "3.12.0"

[dev-dependencies]
serde_json = "1.0"
anyhow = "1.0.98"
