[package]
name = "vicardi"
version = "0.2.0"
edition = "2021"
homepage = "https://oss.uzinfocom.uz"
repository = "https://github.com/uzinfocom-org/vicardi"
description = "JSON VCardArray Generator that uses Serde"
authors = [
  "Sokhibjon Orzikulov <sakhib@orzklv.uz> (https://orzklv.uz)",
  "Maksym Kuzmin <m.kuzmin.r@gmail.com> (https://github.com/m-kuzmin)",
]
keywords = ["jcard", "vcardarray", "serde"]
readme = "README.md"
categories = ["data-structures"]
license = "GPL-3.0"
exclude = ["target", ".github", "flake.lock", "**/*.nix"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_with = "3.12.0"
thiserror = "2.0.12"

[dev-dependencies]
serde_json = "1.0"
anyhow = "1.0.98"
